fix small layout issue for page title on mobile menu opened state

--- a/components/page/megamenu/_mega-menu-title.css
+++ b/components/page/megamenu/_mega-menu-title.css
@@ -29,6 +29,11 @@
     margin-left: 10px;
     margin-top: 6px;
 
+    .active & {
+      margin-left: 1.25rem;
+      margin-top: 0;
+    }
+
     hr {
       margin: 0 100% .25rem 0;
       width: 48px;
